Revision history for Perl application Lstu

0.16 ????-??-??
	- Add Content-Security-Policy header

0.15-2 2018-04-23
	- Update Mojolicious::Plugin::GzipStatic

0.15-1 2018-04-23
	- Fix url command help function

0.15 2018-04-23
	- Add CLI command to search and delete url
	- Fix CI

0.14-1 2018-04-23
	- Fix for PostgreSQL and MySQL connections

0.14 2018-04-22
	- Use same DB backend for Minion than db_type

0.13-1 2018-04-22
	- Better CSS minification

0.13 2018-04-22
	- Gzip static assets with Mojolicious::Plugin::GzipStatic (increase page load speed)
	- Other page load speed improvements

0.12-1 2018-04-22
	- Force Mojo::SQLite version

0.12 2018-04-22
	- Improve LDAP User Authentication Support (beware of configuration changes!) <Ira W.  Snyder>
	- Allow users to configure maximum number of database connections <Ira W.  Snyder>
	- Use CHI for cache system
	- Move some tasks to recurring instead of being in after_dispatch hook
	- Allow to install only deps related to one DB instead of all supported DBs
	- Use Mojo::SQLite instead of ORLite
	- Better CI
	- Put documentation on the wiki (https://framagit.org/luc/lstu/wikis/home)
	- Update dependencies
	- Fix bugs

0.11-2 2018-03-22
	- Update packages dependencies in README
	- Fix CI

0.11-1 2018-03-22
	- Update dependencies

0.11 2018-03-22
	- Add home link to stats page
	- Fix copy-to-clipboard button
	- Option to blacklist URLs whose path part matches the configured regex

0.10 2018-02-22
	- Performance improvments (cache + assets minification)
	- Add /stats/:short API endpoint
	- Update API page
	- Zanata integration (https://trad.framasoft.org)

0.09-2 2017-09-05
	- Handle redirections without host

0.09-1 2017-09-05
	- Handle redirections without host

0.09 2017-09-05
	- Add QRcode generation
	- Option to disable the spamhaus check (#29)
	- Option to blacklist and/or whitelist domains (#30)
	- Option to set the maximum number of redirections (#31)
	- Instance statistics available at /fullstats URL