@@ -31,7 +31,7 @@ variables:
   retry: 2
   dependencies:
     - carton_sqlite
-  coverage: '/Total .*\d+\.\d+/'
+  coverage: '/Total .*\d+\.\d+$/'
 .pg_template: &pg_definition
   stage: tests
   retry: 2
@@ -40,7 +40,7 @@ variables:
   services:
     - name: postgres:9.6
       alias: postgres
-  coverage: '/Total .*\d+\.\d+/'
+  coverage: '/Total .*\d+\.\d+$/'
 .mysql_template: &mysql_definition
   stage: tests
   retry: 2
@@ -49,7 +49,7 @@ variables:
   services:
     - name: mariadb:10.1
       alias: mariadb
-  coverage: '/Total .*\d+\.\d+/'
+  coverage: '/Total .*\d+\.\d+$/'
 
 ### Podcheck
 ##
