@@ -2,6 +2,7 @@ Revision history for Perl application Lstu
 
 0.16 ????-??-??
 	- Add Content-Security-Policy header
+	- Use Memcached for cache system (previous cache was unstable)
 
 0.15-2 2018-04-23
 	- Update Mojolicious::Plugin::GzipStatic
